@@ -153,9 +153,9 @@ public class GeyserBot {
         }
 
         try {
-            storageManager = storageType.getStorageManager().newInstance();
+            storageManager = storageType.getStorageManager().getDeclaredConstructor().newInstance();
             storageManager.setupStorage();
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             LOGGER.error("Unable to create database link!");
             System.exit(0);
         }
